--- a/project0/style.css
+++ b/project0/style.css
@@ -1,5 +1,5 @@
 body{
-    
+    background-repeat: no-repeat;
     background-image: url(https://coolbackgrounds.io/images/backgrounds/index/ranger-4df6c1b6.png);  
     background-size: cover;
     
