--- a/project0/style.css
+++ b/project0/style.css
@@ -166,4 +166,8 @@ li a:hover {
       font-weight: bold;
       font-size: large;
     }
+    @media screen and (max-width: 600px) {
+        .column {
+          width: 100%;
+        }
   }
